--- a/app/chooser/panelStyle.css
+++ b/app/chooser/panelStyle.css
@@ -16,7 +16,14 @@ div.panel-wizard {
     padding-right:0;
 }
 
-.eintraege {    
-  max-height: 500;
-  overflow-y: scroll;
+
+div.eintraege {    
+	height: 300;
+	overflow-y: scroll;
+}
+
+div.list-group-item:hover {		
+    color: #555;
+    text-decoration: none;
+    background-color: #f5f5f5;
 }
