Songauswahl funktioniert nun, Filter auch, hinzufuegen und entfernen von songs aus playlist auch

--- a/app/chooser/panelStyle.css
+++ b/app/chooser/panelStyle.css
@@ -5,6 +5,7 @@ div.flexbox {
     overflow: hidden;
     flex-direction: row;
     flex-wrap: wrap;
+	width: 1000px;
 }
 
 div.panel-wizard {
@@ -16,7 +17,6 @@ div.panel-wizard {
     padding-right:0;
 }
 
-
 div.eintraege {    
 	height: 300;
 	overflow-y: scroll;
@@ -26,4 +26,12 @@ div.list-group-item:hover {
     color: #555;
     text-decoration: none;
     background-color: #f5f5f5;
+}
+
+span.textfield {
+    text-overflow: ellipsis;
+    width: 80%;
+    overflow: hidden;
+    white-space: nowrap;
+    display: inline-block;
 }
